// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/Document/Quotation/Detail render 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Offering Letter",
          "url": "/dashboard/offering-letter",
        },
        Object {
          "label": undefined,
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "agreement": Array [
                    Object {
                      "email": "denacoba@getnada.com",
                      "name": "syahrul",
                      "note": "-",
                      "phoneNumber": "+6282115346660",
                      "position": "Chief",
                      "status": "approved",
                    },
                    Object {
                      "email": "dena.hardianto@telkom.co.id",
                      "name": "dena",
                      "note": "",
                      "phoneNumber": "+6282116515155",
                      "position": "GM",
                      "status": "waiting approval",
                    },
                  ],
                  "companyName": "PT JASA MARGA INDONESIA",
                  "contact": Array [
                    Object {
                      "email": "aa@mailinator.com",
                      "name": "dena",
                      "phoneNumber": "+6282116515155",
                      "position": "manager",
                    },
                  ],
                  "createdAt": "2021-11-30T01:33:57.412Z",
                  "document": Object {
                    "fileName": "SPH-1638236037412-signed.pdf",
                    "fileUrl": "https://storage-assurance-dev.mytens.id/mycarrier-quotation/quotation/SPH-1638236037412/SPH-1638236037412-signed.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=q1dx5HaUIo76Ych3nXqy%2F20220103%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220103T072749Z&X-Amz-Expires=604800&X-Amz-SignedHeaders=host&X-Amz-Signature=d30c61d6542d31835daec5c1dc677b089ad004d996e3220d263236d139ad9f98",
                  },
                  "products": Array [
                    Object {
                      "epicProduct": true,
                      "productId": "1",
                      "productName": "Metro Ethernet",
                      "productParam": "METRO E",
                      "slg": "98",
                    },
                  ],
                  "quotationId": "SPH-1638236037412",
                  "reason": "",
                  "status": "returned",
                  "updatedAt": "2021-11-30T01:35:25.552Z",
                  "worklog": Array [
                    Object {
                      "createdBy": "945982@telkom.co.id",
                      "dateTime": null,
                      "note": "",
                      "status": "draft",
                      "step": 1,
                    },
                    Object {
                      "createdBy": "945982@telkom.co.id",
                      "dateTime": null,
                      "note": "",
                      "status": "telkom approval",
                      "step": 2,
                    },
                    Object {
                      "createdBy": "telkom approval 1",
                      "dateTime": null,
                      "note": "-",
                      "status": "telkom approval",
                      "step": 2,
                    },
                    Object {
                      "createdBy": "telkom approval 2",
                      "dateTime": null,
                      "note": "",
                      "status": "approved",
                      "step": 3,
                    },
                  ],
                },
                "schema": Array [
                  Object {
                    "label": "OFFERING LETTER ID",
                    "name": "offeringLetterId",
                  },
                  Object {
                    "label": "COMPANY",
                    "name": "companyName",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "updatedAt",
                  },
                ],
              },
              "title": "Detail Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Array [
                  Object {
                    "email": "aa@mailinator.com",
                    "name": "dena",
                    "phoneNumber": "+6282116515155",
                    "position": "manager",
                  },
                ],
                "nameKey": "name",
              },
              "title": "Recipient",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": Array [
                  Object {
                    "epicProduct": true,
                    "productId": "1",
                    "productName": "Metro Ethernet",
                    "productParam": "METRO E",
                    "slg": "98",
                  },
                ],
                "nameKey": "productName",
              },
              "title": "Service",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "agreement": Array [
                    Object {
                      "email": "denacoba@getnada.com",
                      "name": "syahrul",
                      "note": "-",
                      "phoneNumber": "+6282115346660",
                      "position": "Chief",
                      "status": "approved",
                    },
                    Object {
                      "email": "dena.hardianto@telkom.co.id",
                      "name": "dena",
                      "note": "",
                      "phoneNumber": "+6282116515155",
                      "position": "GM",
                      "status": "waiting approval",
                    },
                  ],
                  "companyName": "PT JASA MARGA INDONESIA",
                  "contact": Array [
                    Object {
                      "email": "aa@mailinator.com",
                      "name": "dena",
                      "phoneNumber": "+6282116515155",
                      "position": "manager",
                    },
                  ],
                  "createdAt": "2021-11-30T01:33:57.412Z",
                  "document": Object {
                    "fileName": "SPH-1638236037412-signed.pdf",
                    "fileUrl": "https://storage-assurance-dev.mytens.id/mycarrier-quotation/quotation/SPH-1638236037412/SPH-1638236037412-signed.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=q1dx5HaUIo76Ych3nXqy%2F20220103%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220103T072749Z&X-Amz-Expires=604800&X-Amz-SignedHeaders=host&X-Amz-Signature=d30c61d6542d31835daec5c1dc677b089ad004d996e3220d263236d139ad9f98",
                  },
                  "products": Array [
                    Object {
                      "epicProduct": true,
                      "productId": "1",
                      "productName": "Metro Ethernet",
                      "productParam": "METRO E",
                      "slg": "98",
                    },
                  ],
                  "quotationId": "SPH-1638236037412",
                  "reason": "",
                  "status": "returned",
                  "updatedAt": "2021-11-30T01:35:25.552Z",
                  "worklog": Array [
                    Object {
                      "createdBy": "945982@telkom.co.id",
                      "dateTime": null,
                      "note": "",
                      "status": "draft",
                      "step": 1,
                    },
                    Object {
                      "createdBy": "945982@telkom.co.id",
                      "dateTime": null,
                      "note": "",
                      "status": "telkom approval",
                      "step": 2,
                    },
                    Object {
                      "createdBy": "telkom approval 1",
                      "dateTime": null,
                      "note": "-",
                      "status": "telkom approval",
                      "step": 2,
                    },
                    Object {
                      "createdBy": "telkom approval 2",
                      "dateTime": null,
                      "note": "",
                      "status": "approved",
                      "step": 3,
                    },
                  ],
                },
                "schema": Array [
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": false,
                    },
                    "label": "Offering Letter",
                    "name": "document",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "errorsLabel": undefined,
                "steps": Array [
                  "Submitted",
                  "Telkom Approval",
                  "Completed",
                ],
              },
              "title": "Offering Letter Order Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": Array [
                  Object {
                    "date": "",
                    "note": "",
                    "status": "TELKOMREG-AM | APPROVED",
                  },
                  Object {
                    "date": "",
                    "note": "-",
                    "status": "",
                  },
                  Object {
                    "date": "",
                    "note": "",
                    "status": "",
                  },
                  Object {
                    "date": "",
                    "note": "",
                    "status": "DRAFT",
                  },
                ],
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "returned",
        "variant": "",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
</React.Fragment>
`;

exports[`src/pages/Document/Quotation/Detail render/empty 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Offering Letter",
          "url": "/dashboard/offering-letter",
        },
        Object {
          "label": undefined,
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "OFFERING LETTER ID",
                    "name": "offeringLetterId",
                  },
                  Object {
                    "label": "COMPANY",
                    "name": "companyName",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "updatedAt",
                  },
                ],
              },
              "title": "Detail Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "nameKey": "name",
              },
              "title": "Recipient",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "nameKey": "productName",
              },
              "title": "Service",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": false,
                    },
                    "label": "Offering Letter",
                    "name": "document",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "errorsLabel": undefined,
                "steps": Array [
                  "Submitted",
                  "Telkom Approval",
                  "Completed",
                ],
              },
              "title": "Offering Letter Order Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={null}
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
</React.Fragment>
`;
